# wayhouse

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
compositor/: compositor.mk  meson.build
compositor/src/: commands.c  commands.h  config.c  config_.h  containers.c  containers.h  outputs.c  outputs.h  seats.c  seats.h  types.h  wayhouse.c  wayhouse.h  xwayland.c  xwayland.h
dock/: dock.mk  meson.build
dock/src/: dock.c
libwhclient/: libwhclient.mk  meson.build
libwhclient/include/: client.h
libwhclient/src/: client.c
